# dos14-Eremeev-GitFlow

./: .gitignore  DataBase.json  Dockerfile  Dockerfile.authz  Dockerfile.certbot  Dockerfile.nginx  Jenkinsfile  README.md  app.yaml  authz_server.conf  decrypt_secrets.sh  docker-compose.yaml  main.py  nginx.conf  pyproject.toml  roles.yaml  test  users.csv  users.json  users.yaml
Project/: pyproject.toml
ansible/: inventory.ini  pass.yaml  playbook.yaml
ansible/conf/certbot/: certbot.sh  fullchain.pem  privkey.pem
ansible/conf/nginx/: authz_server.conf  nginx.conf
ansible/roles/create_user_authz/defaults/: main.yml
ansible/roles/create_user_authz/handlers/: main.yml
ansible/roles/create_user_authz/tasks/: main.yml
ansible/roles/create_user_authz/tests/: test.yml
ansible/roles/create_user_authz/vars/: main.yml
ansible/roles/install_apps/defaults/: main.yml
ansible/roles/install_apps/handlers/: main.yml
ansible/roles/install_apps/tasks/: main.yml
ansible/roles/install_apps/tests/: test.yml
charts/authz/: Chart.yaml  value.yaml
charts/authz/env/: dev.yaml  prod.yaml
charts/authz/templates/: ClusterIssuer.yaml  Service.yaml  _helpers.tpl  clusterIssuer.yaml  deployment.yaml  fabric8-rbac.yaml  ingress.yaml  secretSA.yaml  service.yaml  serviceaccount.yaml
conf/: certbot.sh  serbot.sh
conf/certbot/: certbot.sh  fullchain.pem  privkey.pem  privkey.pem.readme
conf/db/: db_login.env  db_login.env.example
conf/nginx/: authz_server.conf  nginx.conf
config/: __init__.py
data/: app.yaml  permissions.yaml  roles.yaml  users.json
(+15 files in other folders)
