[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Eremeev Sergey <saeremeev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
optiobal = true
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
